@@ -3678,6 +3678,14 @@ Verwendung:  qucsedit [-r] Datei
         <source>vhdl</source>
         <translation>VHDL</translation>
     </message>
+    <message>
+        <source>representation during DC analysis</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>relax time step raster</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
