@@ -3443,6 +3443,14 @@ Invocation :  qucsedit [-r] fichier
         <source>vhdl</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>representation during DC analysis</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>relax time step raster</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
