@@ -3441,6 +3441,14 @@ Digitális szimuláció</translation>
         <source>vhdl</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>representation during DC analysis</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>relax time step raster</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
